--- a/Menu.html
+++ b/Menu.html
@@ -4,9 +4,9 @@
      </head>
      <body>
         <div style="font-size: 40px;font-weight: 600;text-align: right;background-color: rgb(126, 34, 34);padding: 24px;">
-            <span style="padding: 10px;"> <a href="Index.html" style="border-bottom: none;text-decoration: none;">Index </a>    </span>
-            <span style="padding: 10px;"> <a href="Food.html" style="border-bottom: none;text-decoration: none;">Food </a>   </span>
-            <Span style="padding: 10px;">  <a href="Contact.html" style="border-bottom: none;text-decoration: none;">About</a>   </Span>
+            <span style="padding: 10px;"> <a href="https://food.ndtv.com/lists/10-best-biryani-recipes-696324" style="border-bottom: none;text-decoration: none;">Index </a>    </span>
+            <span style="padding: 10px;"> <a href="https://www.interesjournals.org/articles/health-benefits-of-hyderabadi-biryani-nutrition-facts-and-advantages-68551.html#:~:text=Biryani%20contains%20spices%20well%2Dknown,as%20well%20as%20absorbs%20nutrients." style="border-bottom: none;text-decoration: none;">Food </a>   </span>
+            <Span style="padding: 10px;">  <a href="https://www.instagram.com/sanjayjadar/" style="border-bottom: none;text-decoration: none;">About</a>   </Span>
         </div>
          <img style="position: absolute; width: 100%; z-index: -1;opacity: 1;height: 5200px; border: 8px solid rgb(118, 23, 23);" src="https://thumbs.dreamstime.com/b/design-menu-background-27832409.jpg" alt="Menu Background">
           <br><br><br><br><br>
